# TMS_food

./: pyproject.toml
app/: admin.py  favorite_service.py  forms.py  models.py  urls.py  views.py
app/api/: permissions.py  serializers.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_initial.py  0003_alter_recipe_preview_image.py
food/: settings.py  urls.py  wsgi.py
static/css/: forms.css  main.css
templates/: base.html  footer.html  home.html  ingredient-create.html  menu.html  recipe-form.html  recipes-list.html  welcome.html
templates/recipe/: category.html  recipe.html
templates/registration/: email_confirm.html  invalid_email_confirm.html  register-form.html  register.html
users/: email.py  forms.py  urls.py  views.py
users/migrations/: 0001_initial.py
